Render: Postgres + Whitenoise + migrate/collectstatic + honcho

--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,14 @@ services:
   - type: web
     name: my-django-app
     env: python
+    plan: free
     buildCommand: |
       pip install -r requirements.txt
-    startCommand: honcho start
-    plan: free
+      python manage.py collectstatic --noinput
+    startCommand: bash -c "python manage.py migrate --noinput && honcho start"
     envVars:
+      - key: DATABASE_URL
+        fromSecret: database-url
       - key: REDIS_URL
         fromSecret: redis-url
       - key: SECRET_KEY
